refactor: add fonts, vars

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,3 +1,55 @@
 // colors
+$green: #4b9200;
+$orange: #f9804b;
+$yellow: #ffee2e;
+$red: #d31414;
+$black-blue: #333b41;
+$gray: #767474;
+$gray-smoky: #ababab;
+$gray-light: #f1f3f2;
+$white: #fdfdff;
+
+// gradients
+$orange-grad: linear-gradient(
+        315.75deg,
+        rgba(254, 210, 144, 0.7) 30.06%,
+        #febdab 100.95%,
+        rgba(254, 210, 144, 0.7) 106.36%
+    ),
+    linear-gradient(
+        315.75deg,
+        rgba(254, 189, 171, 0.74) 30.06%,
+        rgba(243, 169, 248, 0.66) 50.74%,
+        #e0d8f0 80.49%,
+        #eaf7fe 127.9%,
+        #eaf7fe 149.54%
+    ),
+    linear-gradient(
+        315.75deg,
+        rgba(254, 189, 171, 0.74) 30.06%,
+        rgba(243, 169, 248, 0.66) 50.74%,
+        #e0d8f0 80.49%,
+        #eaf7fe 127.9%,
+        #eaf7fe 149.54%
+    );
+$pink-grad: linear-gradient(
+        315.75deg,
+        rgba(254, 189, 171, 0.74) 30.06%,
+        rgba(243, 169, 248, 0.66) 50.74%,
+        #e0d8f0 80.49%,
+        #eaf7fe 127.9%,
+        #eaf7fe 149.54%
+    ),
+    linear-gradient(
+        315.75deg,
+        rgba(254, 189, 171, 0.74) 30.06%,
+        rgba(243, 169, 248, 0.66) 50.74%,
+        #e0d8f0 80.49%,
+        #eaf7fe 127.9%,
+        #eaf7fe 149.54%
+    );
 
 // media
+
+// typography
+$family: 'Roboto', sans-serif;
