feat: add header

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,3 +20,5 @@ body {
 // components
 @import 'components/header.scss';
 @import 'components/footer.scss';
+@import 'components/container.scss';
+@import 'components/nav.scss';
