--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,3 +1,32 @@
 <header class="header">
+    <div class="container">
+        <div class="header__inner">
+            <a href="#" class="logo header__logo">
+                <img src="../../img/logo/logo.png" alt="Logotype PetStory online">
+            </a>
 
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item active">
+                        <a href="#" class="nav__link">About</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Map</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Zoos</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Donate</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
+                class="header__designedby">Designed by ©</a>
+        </div>
+    </div>
 </header>
