--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,2 +1,26 @@
 .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+    height: 80px;
+    padding: 14px 0;
+    background-color: #000;
+    color: #fff;
+
+    &__inner {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    &__designedby {
+        margin-left: auto;
+
+        font-weight: 500;
+        color: inherit;
+        text-decoration: none;
+    }
 }
