feat: add about section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,13 @@ body {
     font-family: $family;
 }
 
-p {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
@@ -29,3 +35,4 @@ p {
 @import 'components/section.scss';
 @import 'components/btn.scss';
 @import 'components/banner.scss';
+@import 'components/about.scss';
