--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -5,7 +5,31 @@
             cover;
     }
 
+    &--about {
+        padding: 140px 0;
+        background: url('../../img/about/about-bg.png') no-repeat right/ contain;
+    }
+
     &__inner {
         display: flex;
+        color: $black-blue;
+    }
+
+    &__title {
+        font-size: 48px;
+        line-height: 1.2;
+        font-weight: 400;
+    }
+
+    &__subtitle {
+        font-size: 24px;
+        line-height: 1.2;
+        font-weight: 400;
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 1.4;
+        font-weight: 400;
     }
 }
