--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,3 +36,5 @@ h6 {
 @import 'components/btn.scss';
 @import 'components/banner.scss';
 @import 'components/about.scss';
+@import 'components/card.scss';
+@import 'components/animals.scss';
