--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -7,7 +7,7 @@ $black-blue: #333b41;
 $gray: #767474;
 $gray-smoky: #ababab;
 $gray-light: #f1f3f2;
-$white: #fdfdff;
+$white: rgba(#fdfdff, 52%);
 $hover: #e47209;
 $active: $green;
 $disabled: $gray;
