--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,10 @@ h6 {
     margin: 0;
 }
 
+.strong {
+    font-weight: 500 !important;
+}
+
 // components
 @import 'components/header.scss';
 @import 'components/footer.scss';
@@ -38,3 +42,4 @@ h6 {
 @import 'components/about.scss';
 @import 'components/card.scss';
 @import 'components/animals.scss';
+@import 'components/feed.scss';
