--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -40,6 +40,19 @@
         }
     }
 
+    &--testimonials {
+        .section__inner {
+            flex-direction: column;
+            padding: 140px 0 180px;
+        }
+
+        .section__title {
+            font-size: 36px;
+            line-height: 1.3;
+            margin-bottom: 47px;
+        }
+    }
+
     &__inner {
         display: flex;
         color: $black-blue;
