--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,3 +43,4 @@ h6 {
 @import 'components/card.scss';
 @import 'components/animals.scss';
 @import 'components/feed.scss';
+@import 'components/testimonials.scss';
