feat: add footer section

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,3 +1,83 @@
 <footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__top">
+                <a href="#" class="logo">
+                    <img src="../../img/logo/logo.png" alt="Logotype PetStory Online">
+                </a>
 
+                <div class="subscribe">
+                    <p class="subscribe__title section__subtitle">Subscribe to our news</p>
+                    <div class="subscribe__controls">
+                        <input type="email" class="subscribe__input" placeholder="Enter your email">
+                        <button type="submit" class="subscribe__btn">Submit</button>
+                    </div>
+                </div>
+            </div>
+
+            <button type="button" class="btn btn--fill btn--round">donate for volunteers</button>
+
+            <div class="footer__bottom">
+                <div class="socials footer__socials">
+                    <ul class="socials__list">
+                        <li class="socials__item">
+                            <a href="http://facebook.com/" class="socials__link">
+                                <span class="socials__image">
+                                    <img src="../../img/socials/facebook.svg" class="socials__icon" alt="facebook icon">
+                                </span>
+                                Facebook
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="http://twitter.com/" class="socials__link">
+                                <span class="socials__image">
+                                    <img src="../../img/socials/twitter.svg" class="socials__icon" alt="twitter icon">
+                                </span>
+                                Twitter
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="#" class="socials__link">
+                                <span class="socials__image">
+                                    <img src="../../img/socials/instagram.svg" class="socials__icon"
+                                        alt="instagram icon">
+                                </span>
+                                Instagram
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="#" class="socials__link">
+                                <span class="socials__image">
+                                    <img src="../../img/socials/youtube.svg" class="socials__icon" alt="youtube icon">
+                                </span>
+                                YouTube
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item active">
+                            <a href="#" class="nav__link">About</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Map</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Zoos</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Contact us</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="footer__copyright">
+                    <p>Designed by Alisa Samborskaya</p>
+                    <p>©RSSchool & ©Yem Digital 2021</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
