--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,3 +44,5 @@ h6 {
 @import 'components/animals.scss';
 @import 'components/feed.scss';
 @import 'components/testimonials.scss';
+@import 'components/socials.scss';
+@import 'components/subscribe.scss';
