--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -4,6 +4,8 @@
         gap: 0 58px;
 
         list-style: none;
+        margin: 0;
+        padding: 0;
     }
 
     &__item {
@@ -16,7 +18,7 @@
 
         &.active,
         &:hover {
-            color: $orange;
+            color: orange;
         }
     }
 
