feat: add slider in testimonials section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,3 +46,4 @@ h6 {
 @import 'components/testimonials.scss';
 @import 'components/socials.scss';
 @import 'components/subscribe.scss';
+@import 'components/swiper.scss';
