--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -41,6 +41,8 @@
     }
 
     &--testimonials {
+        position: relative;
+
         .section__inner {
             flex-direction: column;
             padding: 140px 0 180px;
@@ -50,6 +52,14 @@
             font-size: 36px;
             line-height: 1.3;
             margin-bottom: 47px;
+
+            text-align: center;
+        }
+
+        .decor {
+            position: absolute;
+            bottom: -135px;
+            right: 0;
         }
     }
 
