--- a/src/scss/components/testimonials.scss
+++ b/src/scss/components/testimonials.scss
@@ -1,11 +1,8 @@
 .testimonials {
     &__slider {
-        display: flex;
-        gap: 30px;
-
+        position: relative;
         margin-bottom: 60px;
     }
-
     &__card {
         position: relative;
         width: 268px;
@@ -16,6 +13,20 @@
         border-radius: 20px;
         border: 2px solid transparent;
         background-clip: padding-box;
+
+        ::-webkit-scrollbar {
+            width: 5px;
+            border-radius: 5px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background-color: $gray-smoky;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #fe9013;
+            border-radius: 5px;
+        }
 
         &::before {
             content: '';
