--- a/src/scss/components/feed.scss
+++ b/src/scss/components/feed.scss
@@ -69,8 +69,7 @@
 
         background-color: #fff;
         border-radius: 5px;
-        border: 1px solid transparent;
-        background-clip: padding-box;
+        border: 1px solid orange;
 
         // &::before {
         //     content: '';
@@ -102,5 +101,6 @@
 
     &__figcaption {
         font-size: 16px;
+        line-height: 1.4;
     }
 }
