--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -10,13 +10,14 @@
 
     cursor: pointer;
 
-    transition: background-color 0.3s linear;
+    transition: background 0.3s linear;
 
     &:hover {
         background: $hover;
     }
 
-    &.active {
+    &:focus,
+    &:active {
         background: $active;
     }
 
