--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,3 +47,5 @@ h6 {
 @import 'components/socials.scss';
 @import 'components/subscribe.scss';
 @import 'components/swiper.scss';
+@import 'components/donate.scss';
+@import 'components/progressbar.scss';
