--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -8,7 +8,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item active">
-                        <a href="#" class="nav__link">About</a>
+                        <a href="index.html" class="nav__link">About</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Map</a>
@@ -17,7 +17,7 @@
                         <a href="#" class="nav__link">Zoos</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">Donate</a>
+                        <a href="donate.html" class="nav__link">Donate</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Contact us</a>
