refactor: fix paths

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="footer__inner">
             <div class="footer__top">
                 <a href="#" class="logo">
-                    <img src="../../img/logo/logo.png" alt="Logotype PetStory Online">
+                    <img src="img/logo/logo.png" alt="Logotype PetStory Online">
                 </a>
 
                 <div class="subscribe">
@@ -23,7 +23,7 @@
                         <li class="socials__item">
                             <a href="http://facebook.com/" class="socials__link">
                                 <span class="socials__image">
-                                    <img src="../../img/socials/facebook.svg" class="socials__icon" alt="facebook icon">
+                                    <img src="img/socials/facebook.svg" class="socials__icon" alt="facebook icon">
                                 </span>
                                 Facebook
                             </a>
@@ -31,7 +31,7 @@
                         <li class="socials__item">
                             <a href="http://twitter.com/" class="socials__link">
                                 <span class="socials__image">
-                                    <img src="../../img/socials/twitter.svg" class="socials__icon" alt="twitter icon">
+                                    <img src="img/socials/twitter.svg" class="socials__icon" alt="twitter icon">
                                 </span>
                                 Twitter
                             </a>
@@ -39,8 +39,7 @@
                         <li class="socials__item">
                             <a href="#" class="socials__link">
                                 <span class="socials__image">
-                                    <img src="../../img/socials/instagram.svg" class="socials__icon"
-                                        alt="instagram icon">
+                                    <img src="img/socials/instagram.svg" class="socials__icon" alt="instagram icon">
                                 </span>
                                 Instagram
                             </a>
@@ -48,7 +47,7 @@
                         <li class="socials__item">
                             <a href="#" class="socials__link">
                                 <span class="socials__image">
-                                    <img src="../../img/socials/youtube.svg" class="socials__icon" alt="youtube icon">
+                                    <img src="img/socials/youtube.svg" class="socials__icon" alt="youtube icon">
                                 </span>
                                 YouTube
                             </a>
