--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__inner">
             <a href="#" class="logo header__logo">
-                <img src="../../img/logo/logo.png" alt="Logotype PetStory online">
+                <img src="img/logo/logo.png" alt="Logotype PetStory online">
             </a>
 
             <nav class="nav">
