--- a/src/scss/components/feed.scss
+++ b/src/scss/components/feed.scss
@@ -94,7 +94,7 @@
             width: 69px;
             height: 35px;
 
-            background: url('../../img/icons/arrow-feed.png') no-repeat center /
+            background: url('../img/icons/arrow-feed.png') no-repeat center /
                 contain;
         }
     }
