--- a/src/scss/components/progressbar.scss
+++ b/src/scss/components/progressbar.scss
@@ -69,7 +69,7 @@
             width: 40px;
             height: 40px;
 
-            background: url('../../img/icons/roller-icon.png') no-repeat;
+            background: url('../img/icons/roller-icon.png') no-repeat;
 
             opacity: 0;
 
