fix: change btn hover effect, change links

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer__inner">
             <div class="footer__top">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo/logo.png" alt="Logotype PetStory Online">
                 </a>
 
@@ -10,12 +10,12 @@
                     <p class="subscribe__title section__subtitle">Subscribe to our news</p>
                     <div class="subscribe__controls">
                         <input type="email" class="subscribe__input" placeholder="Enter your email">
-                        <button type="submit" class="subscribe__btn">Submit</button>
+                        <button type="submit" class="subscribe__btn mistake">Submit</button>
                     </div>
                 </div>
             </div>
 
-            <button type="button" class="btn btn--fill btn--round">donate for volunteers</button>
+            <a href="donate.html" class="btn btn--fill btn--round">donate for volunteers</a>
 
             <div class="footer__bottom">
                 <div class="socials footer__socials">
@@ -58,7 +58,7 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item active">
-                            <a href="#" class="nav__link">About</a>
+                            <a href="index.html" class="nav__link">About</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Map</a>
