--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <a href="#" class="logo header__logo">
+            <a href="index.html" class="logo header__logo">
                 <img src="img/logo/logo.png" alt="Logotype PetStory online">
             </a>
 
