--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -4,6 +4,7 @@
     font-weight: 500;
     text-transform: uppercase;
     color: #fff;
+    text-align: center;
 
     background: none;
     border: 0;
@@ -11,10 +12,6 @@
     cursor: pointer;
 
     transition: background 0.3s linear;
-
-    &:hover {
-        background: $hover;
-    }
 
     &:focus,
     &:active {
