--- a/src/scss/components/subscribe.scss
+++ b/src/scss/components/subscribe.scss
@@ -45,6 +45,11 @@
                 color: $red;
             }
         }
+
+        &:valid + .subscribe__btn {
+            border-color: $black-blue;
+            color: #000;
+        }
     }
 
     &__btn {
@@ -59,9 +64,9 @@
         font-family: $family;
         font-size: 16px;
         line-height: 1.4;
-        color: #000;
+        color: $red;
 
-        border: 1px solid $black-blue;
+        border: 1px solid $red;
         border-radius: 5px;
         cursor: pointer;
 
@@ -74,8 +79,6 @@
         }
 
         &.failed {
-            border-color: $red;
-            color: $red;
         }
     }
 }
