fix: remove hover from active nav item

--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -20,6 +20,10 @@
         &:hover {
             color: orange;
         }
+
+        &.active:hover {
+            color: #fff;
+        }
     }
 
     &__link {
