fix: pixel perfect, change card animation

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -27,6 +27,10 @@
         margin-top: 44px;
     }
 
+    &__nav {
+        margin-left: 115px;
+    }
+
     &__copyright {
         display: flex;
         flex-direction: column;
