--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -55,7 +55,7 @@
                     </ul>
                 </div>
 
-                <nav class="nav">
+                <nav class="nav footer__nav">
                     <ul class="nav__list">
                         <li class="nav__item active">
                             <a href="index.html" class="nav__link">About</a>
