--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -1,6 +1,7 @@
 .btn {
     font-family: $family;
     font-size: 16px;
+    line-height: 1.4;
     font-weight: 500;
     text-transform: uppercase;
     color: #fff;
