--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -11,7 +11,7 @@
     border: 1px solid orange;
     border-radius: 5px;
 
-    // background-clip: padding-box;
+    transition: background-color 0.3s linear;
 
     overflow: hidden;
 
@@ -26,12 +26,15 @@
     //     background: $orange;
     // }
 
-    &:hover .card__image img {
-        transform: scale(1.05);
-    }
+    &:hover {
+        background-color: #ddd;
+        .card__image img {
+            transform: scale(1.05);
+        }
 
-    &:hover .card__info {
-        transform: translateY(0);
+        .card__info {
+            transform: translateY(0);
+        }
     }
 
     &__image {
@@ -41,6 +44,7 @@
         border-radius: 5px 5px 0 0;
 
         img {
+            display: block;
             transition: transform 0.3s linear;
         }
 
@@ -65,6 +69,8 @@
         padding: 8px 13px 13px;
 
         transform: translateY(-100%);
+
+        background-color: transparent;
 
         overflow: hidden;
 
