--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -1,6 +1,6 @@
 .section {
     &--banner {
-        min-height: 72vh;
+        min-height: 700px;
         background: url('../img/banner/banner-bg.jpg') no-repeat center / cover;
     }
 
@@ -63,6 +63,11 @@
     }
 
     &--donate {
+        padding: 40px 0 180px;
+
+        .section__inner {
+            padding: 40px 92px 62px;
+        }
         .section__content {
             flex-direction: column;
             align-items: center;
