fix: change margins in feed section

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -36,6 +36,14 @@
 
         .section__text:not(:last-child) {
             margin-bottom: 10px;
+
+            &.strong {
+                position: absolute;
+            }
+        }
+
+        .section__text.last {
+            margin-top: 71px;
         }
     }
 
