--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -35,6 +35,8 @@
         display: flex;
         flex-direction: column;
 
+        font-size: 16px;
+        line-height: 1.3;
         font-weight: 300;
 
         color: gray;
