--- a/src/scss/components/progressbar.scss
+++ b/src/scss/components/progressbar.scss
@@ -10,6 +10,7 @@
     &__caption {
         font-size: 16px;
         color: #000;
+        margin-left: 5px;
         margin-bottom: 17px;
     }
 
