--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -73,6 +73,10 @@
     &--donate {
         padding: 40px 0 180px;
 
+        .section__title {
+            margin-bottom: 22px;
+        }
+
         .section__inner {
             padding: 40px 92px 62px;
         }
