--- a/src/scss/components/testimonials.scss
+++ b/src/scss/components/testimonials.scss
@@ -1,13 +1,13 @@
 .testimonials {
     &__slider {
         position: relative;
-        margin-bottom: 60px;
+        margin-bottom: 58px;
     }
     &__card {
         position: relative;
         width: 268px;
         height: 391px;
-        padding: 15px 16px 19px;
+        padding: 15px 14px 19px;
 
         background-color: $gray-light;
         border-radius: 20px;
@@ -81,6 +81,6 @@
 
         max-height: 85%;
 
-        overflow: auto;
+        overflow: hidden;
     }
 }
