--- a/src/scss/components/testimonials.scss
+++ b/src/scss/components/testimonials.scss
@@ -7,26 +7,26 @@
         position: relative;
         width: 268px;
         height: 391px;
-        padding: 15px 14px 19px;
+        padding: 16px 15px 19px;
 
         background-color: $gray-light;
         border-radius: 20px;
         border: 2px solid transparent;
         background-clip: padding-box;
 
-        ::-webkit-scrollbar {
-            width: 5px;
-            border-radius: 5px;
-        }
+        // ::-webkit-scrollbar {
+        //     width: 5px;
+        //     border-radius: 5px;
+        // }
 
-        ::-webkit-scrollbar-track {
-            background-color: $gray-smoky;
-        }
+        // ::-webkit-scrollbar-track {
+        //     background-color: $gray-smoky;
+        // }
 
-        ::-webkit-scrollbar-thumb {
-            background-color: #fe9013;
-            border-radius: 5px;
-        }
+        // ::-webkit-scrollbar-thumb {
+        //     background-color: #fe9013;
+        //     border-radius: 5px;
+        // }
 
         &::before {
             content: '';
@@ -79,8 +79,10 @@
         font-weight: 300;
         line-height: 1.2;
 
-        max-height: 85%;
+        p {
+            width: 100%;
+        }
 
-        overflow: hidden;
+        // overflow: hidden;
     }
 }
