--- a/src/scss/components/donate.scss
+++ b/src/scss/components/donate.scss
@@ -27,7 +27,7 @@
     &__text {
         font-size: 16px;
         line-height: 1.4;
-        margin-bottom: 40px;
+        margin-bottom: 43px;
     }
 
     &__amount-block {
@@ -128,6 +128,7 @@
         align-items: center;
     }
     &__radios {
+        margin-left: -10px;
         margin-bottom: 31px;
         display: flex;
         justify-content: center;
