--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -36,6 +36,10 @@
             max-width: 495px;
             max-height: 367px;
         }
+
+        @media (max-width: $sm) {
+            max-height: none;
+        }
     }
 
     &__title {
@@ -49,6 +53,7 @@
         @media (max-width: $sm) {
             font-size: 24px;
             margin-bottom: 10px;
+            margin-left: 0;
         }
     }
 
@@ -64,7 +69,7 @@
 
         @media (max-width: $sm) {
             margin-top: 20px;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
     }
 }
