--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -42,7 +42,7 @@
 
         @media (max-width: $sm) {
             justify-content: center;
-            margin-bottom: 86px;
+            margin-bottom: 84px;
         }
     }
 
@@ -52,7 +52,7 @@
         }
 
         @media (max-width: $sm) {
-            margin-bottom: 30px;
+            margin-bottom: 22px;
         }
     }
 
@@ -102,6 +102,10 @@
         @media (max-width: $md) {
             margin-left: 0;
         }
+
+        @media (max-width: $sm) {
+            margin: 0 auto;
+        }
     }
 
     &__copyright {
@@ -113,6 +117,10 @@
         font-weight: 300;
 
         color: gray;
+
+        @media (max-width: $sm) {
+            font-size: 15px;
+        }
 
         p + p {
             margin-top: 10px;
