fix: change animal card animation

--- a/src/scss/components/burger.scss
+++ b/src/scss/components/burger.scss
@@ -14,7 +14,7 @@
     background: none;
     border: 0;
 
-    @media (max-width: $md) {
+    @media (max-width: 640px) {
         display: block;
     }
 
