--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -16,9 +16,36 @@
 
     overflow: hidden;
 
+    &--7 {
+        display: none;
+    }
+
     @media (max-width: $lg) {
         max-width: 294px;
         max-height: 354px;
+
+        &--1 {
+            order: 1;
+        }
+        &--2 {
+            order: 2;
+        }
+        &--3 {
+            order: 5;
+        }
+        &--4 {
+            display: none;
+        }
+        &--5 {
+            order: 3;
+        }
+        &--6 {
+            order: 7;
+        }
+        &--7 {
+            display: flex;
+            order: 6;
+        }
     }
 
     @media (max-width: $md) {
