--- a/src/scss/components/donate.scss
+++ b/src/scss/components/donate.scss
@@ -103,7 +103,7 @@
         justify-content: center;
         align-items: center;
 
-        margin-top: 60px;
+        margin-top: 58px;
         margin-bottom: 52px;
         margin-left: -10px;
 
@@ -118,7 +118,9 @@
             margin-top: 0;
             margin-left: 0;
             margin-bottom: 6px;
+        }
 
+        @media (max-width: 321px) {
             justify-content: space-between;
         }
     }
@@ -310,6 +312,7 @@
 
     &__submit {
         margin-bottom: 30px;
+        margin-left: 6px;
 
         @media (max-width: $lg) {
             margin-left: 4px;
