--- a/src/scss/components/animals.scss
+++ b/src/scss/components/animals.scss
@@ -29,7 +29,7 @@
         }
 
         @media (max-width: $sm) {
-            padding: 0 14.7px 60px 0;
+            padding: 0 0 60px 0;
         }
     }
 
@@ -117,9 +117,5 @@
 
     &__btn {
         position: relative;
-
-        @media (max-width: $sm) {
-            left: 6px;
-        }
     }
 }
